# balderhub-ble

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
docs/source/: conf.py  contrib.rst  examples.rst  features.rst  index.rst  installation.rst  scenarios.rst  topic_intro.rst  utilities.rst
src/balderhub/ble/contrib/battery/setup_features/: __init__.py  battery_level_reader.py  device_activity_feature.py
src/balderhub/ble/contrib/heart/setup_features/: __init__.py  bpm_value_reader_feature.py  rr_value_reader_feature.py
src/balderhub/ble/lib/scenario_features/: __init__.py  advertisement_observer_feature.py  ble_device_config.py  device_information_config.py
src/balderhub/ble/lib/scenario_features/gatt/: __init__.py  base_gatt_profile_feature.py  base_gatt_service_feature.py  gatt_battery_service_feature.py  gatt_controller_feature.py  gatt_device_information_service_feature.py  gatt_heart_rate_profile_feature.py  gatt_heart_rate_service_feature.py
src/balderhub/ble/lib/setup_features/: __init__.py  bleak_advertisement_listener_feature.py  bleak_gatt_controller_feature.py
src/balderhub/ble/lib/utils/: __init__.py  advertisement_message.py  async_manager_thread.py  base_gatt_message.py  ble_device_information.py  characteristic.py  characteristic_property.py  characteristic_security.py  pnp_id_data.py  raw_gatt_message.py
src/balderhub/ble/scenarios/: __init__.py  scenario_battery_service.py  scenario_device_information_service.py  scenario_hr_profile_advertisements.py  scenario_validate_heart_rate_service.py
