[metadata]
name = balderhub-ble
description = balderhub-ble: BalderHub Project for testing the Bluetooth Low Energy protocol
author = Max Stahlschmidt
long_description = file: README.md
long_description_content_type = text/markdown
url = https://hub.balder.dev/projects/ble
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
keywords = test, systemtest, reusable, scenario, junit, balder
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Testing
    Topic :: Utilities
project_urls =
    Source=https://github.com/balder-dev/balderhub-ble/
    Tracker=https://github.com/balder-dev/balderhub-ble/issues

[options]
packages =
    balderhub.ble
    balderhub.ble.contrib
    balderhub.ble.contrib.battery
    balderhub.ble.contrib.battery.setup_features
    balderhub.ble.contrib.heart
    balderhub.ble.contrib.heart.setup_features
    balderhub.ble.lib
    balderhub.ble.lib.scenario_features
    balderhub.ble.lib.scenario_features.gatt
    balderhub.ble.lib.setup_features
    balderhub.ble.lib.utils
    balderhub.ble.scenarios

install_requires =
    baldertest
    balderhub-heart
    balderhub-battery
    bleak
python_requires = >=3.9
package_dir =
    =src
setup_requires =
    setuptools
    setuptools-scm>=6.0
zip_safe = no
